--- a/html/index.html
+++ b/html/index.html
@@ -3,12 +3,14 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self';">
     <meta name="description" content="Ejemplo de una aplicación">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../css/index.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/interfaz.css">
     <title>Laboratorio de química</title>
+    <script defer src="../renderer.js"></script>
 </head>
 
 <body>
