--- a/html/login.html
+++ b/html/login.html
@@ -23,11 +23,11 @@
                 <form>
                     <div class="form-group">
                         <label for="username">Nombre del usuario</label>
-                        <input id="nomUsar" type="text" name="nomUsar" required="required" placeholder="Usuario" />
+                        <input id="nomUsar" type="text" name="nomUsar" required="required" placeholder="Usuario" value="Eduardo" />
                     </div>
                     <div class="form-group">
                         <label for="password">Password</label>
-                        <input id="passUsar" type="password" name="passUsar" required="required" placeholder="Password" />
+                        <input id="passUsar" type="password" name="passUsar" required="required" placeholder="Password" value="12345" />
                     </div>
                     <div class="form-group">
                         <label class="form-remember">
