--- a/html/material.html
+++ b/html/material.html
@@ -109,6 +109,7 @@
         </div>
 
     </div>
+    <script src="../js/material.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
