Tabla reactiva funcionando (show data and add items reactive)

--- a/html/reactivo.html
+++ b/html/reactivo.html
@@ -37,22 +37,22 @@
                 <h2>Reactivos</h2>
                 <form>
                     <div class="mb-0">
-                        <label for="nombre" class="form-label">Clasificación</label>
+                        <!-- <label for="nombre" class="form-label">Clasificación</label> -->
                         <input type="text" class="form-control" id="clasificacion" placeholder="Clasificación" autofocus>
 
                     </div>
                     <div class="mb-0">
                         <label for="nombre" class="form-label">Nombre</label>
-                        <input type="text" class="form-control" id="nombre" placeholder="Nombre" autofocus>
+                        <input type="text" class="form-control" id="nombre" placeholder="ej. Cloruro de sodio" autofocus>
 
                     </div>
                     <div class="mb-0">
                         <label for="cantidad" class="form-label">Fórmula</label>
-                        <input type="text" class="form-control" id="formula" placeholder="Fórmula" autofocus>
+                        <input type="text" class="form-control" id="formula" placeholder="ej. NaCI" autofocus>
                     </div>
                     <div class="mb-0">
                         <label for="presentacion" class="form-label">Cantidad</label>
-                        <input type="number" class="form-control" id="cantidad" placeholder="Cantidad">
+                        <input type="number" class="form-control" id="cantidad" placeholder="100">
                     </div>
                     <div class="my-4">
                         <table class="table">
@@ -68,7 +68,8 @@
                                         <input type="number" class="form-control" id="azul" placeholder="azul">
                                         <input type="number" class="form-control" id="rojo" placeholder="Rojo">
                                         <input type="number" class="form-control" id="amarillo" placeholder="Amarillo">
-                                        <input type="text" class="form-control" id="blanco" placeholder="Blanco">
+                                        <!-- <input type="text" class="form-control" id="blanco" placeholder="Blanco"> -->
+                                        <input type="text" class="form-control" id="blanco" placeholder="Riesgo">
 
                                     </td>
                                     <td class="centradobg-blue"></td>
