--- a/html/material.html
+++ b/html/material.html
@@ -58,7 +58,7 @@
                             </thead>
                             <tbody>
                                 <tr>
-                                    <td class="centrado bg-black">
+                                    <td class="centrado">
                                         <input type="number" class="form-control" id="volumen" placeholder="Volumen">
                                         <input type="text" class="form-control" id="unidad" placeholder="Unidades">
                                         <input type="file" class="form-control" id="imagen" placeholder="imagen">
