se implementa la funcionalidad de eliminar en todas las vistas

--- a/html/material.html
+++ b/html/material.html
@@ -35,7 +35,7 @@
             <div class="col-sm-12 col-md-2 col-lg-2 col-xl-2 py-4 bg-white">
                 <input type="text" id="idmaterial" hidden>
                 <h2>Material</h2>
-                <form>
+                <form id="material-form">
                     <div class="mb-0">
                         <label for="nombre" class="form-label">Nombre del material</label>
                         <input type="text" class="form-control" id="nombre" placeholder="Nombre de material" autofocus>
