--- a/html/practica.html
+++ b/html/practica.html
@@ -34,7 +34,7 @@
         <div class="row">
             <div class="col-sm-12 col-md-2 col-lg-2 col-xl-2 py-4 bg-white">
                 <input type="text" id="idreactivo" hidden>
-                <h3>Practicas</h3>
+                <h3>Prácticas</h3>
                 <form>
                     <div class="mb-0">
                         <label for="nombre" class="form-label">Nombre</label>
@@ -56,7 +56,8 @@
             </div>
             <div class="col-sm-12 col-md-10 col-lg-10 col-xl-10 py-4 bg-white">
                 <h3>Listado de Practicas</h3>
-                <table class="table  table-dark table-striped table-md">
+                <h4 class="pt-3" id="subtitle"></h4>
+                <table class="table table-dark table-striped table-md" id="table-practicas">
                     <thead>
                         <tr>
 
