--- a/html/reactivo.html
+++ b/html/reactivo.html
@@ -93,6 +93,7 @@
             </div>
             <div class="col-sm-12 col-md-10 col-lg-10 col-xl-10 py-4  text-bg-dark">
                 <h3>Lista de reactivos</h3>
+                <h4 class="pt-3" id="subtitle"></h4>
                 <table class="table  table-dark  table-md">
                     <thead>
                         <tr>
