se agrega link a las imagenes

--- a/html/index.html
+++ b/html/index.html
@@ -21,7 +21,9 @@
             <h3>Laboratorio de química</h3>
             <div class="col-sm-12  col-md-4 col-lg-4 col-xl-4">
                 <div class="card">
-                    <img src="../imagens/material.jpg" class="card-img-top" alt="...">
+                    <a href="material.html">
+                        <img src="../imagens/material.jpg" class="card-img-top" alt="...">
+                    </a>
 
                     <div class="card-body">
 
@@ -33,7 +35,9 @@
             </div>
             <div class="col-sm-12  col-md-4 col-lg-4 col-xl-4">
                 <div class="card">
-                    <img src="../imagens/reactivos.jpg" class="card-img-top" alt="...">
+                    <a href="reactivo.html">
+                        <img src="../imagens/reactivos.jpg" class="card-img-top" alt="...">
+                    </a>
                     <div class="card-body">
                         <h5 class="card-title">Reactivos</h5>
                         <p class="card-text">Registrar los reactivos en el laboratorio</p>
@@ -43,7 +47,9 @@
             </div>
             <div class="col-sm-12  col-md-4 col-lg-4 col-xl-4">
                 <div class="card">
-                    <img src="../imagens/practicas.jpg" class="card-img-top" alt="...">
+                    <a href="practica.html">
+                        <img src="../imagens/practicas.jpg" class="card-img-top" alt="...">
+                    </a>
 
                     <div class="card-body">
                         <h5 class="card-title">Prácticas</h5>
