tipo de input establecido

--- a/html/material.html
+++ b/html/material.html
@@ -61,7 +61,7 @@
                                     <td class="centrado">
                                         <input type="number" class="form-control" id="volumen" placeholder="Volumen">
                                         <input type="text" class="form-control" id="unidad" placeholder="Unidades">
-                                        <input type="file" class="form-control" id="imagen" placeholder="imagen">
+                                        <input type="file" class="form-control" accept="image/*" placeholder="imagen">
 
 
                                     </td>
