--- a/html/material.html
+++ b/html/material.html
@@ -61,7 +61,7 @@
                                     <td class="centrado">
                                         <input type="number" class="form-control" id="volumen" placeholder="Volumen">
                                         <input type="text" class="form-control" id="unidad" placeholder="Unidades">
-                                        <input type="file" class="form-control" accept="image/*" placeholder="imagen">
+                                        <input type="file" class="form-control" accept="image/*" placeholder="imagen" id="imagen">
 
 
                                     </td>
@@ -86,7 +86,9 @@
             </div>
             <div class="col-sm-12 col-md-10 col-lg-10 col-xl-10 py-4 bg-white">
                 <h3>Lista de material</h3>
-                <table class="table  table-dark table-striped table-md">
+                <h4 class="pt-3" id="subtitle"></h4>
+
+                <table class="table  table-dark table-striped table-md" id="tableMateriales">
                     <thead>
                         <tr>
 
