--- a/html/index.html
+++ b/html/index.html
@@ -29,7 +29,8 @@
 
                         <h5 class="card-title">Material</h5>
                         <p class="card-text">Registrar los materiales en el laboratorio</p>
-                        <a href="lista-materiales.html" class="btn btn-primary" id="practica">Ir a material</a>
+                        <!-- <a href="lista-materiales.html" class="btn btn-primary" id="practica">Ir a material</a> -->
+                        <a href="material-view.html" class="btn btn-primary" id="practica">Ir a material</a>
                     </div>
                 </div>
             </div>
