--- a/html/practica.html
+++ b/html/practica.html
@@ -39,16 +39,15 @@
                     <div class="mb-0">
                         <label for="nombre" class="form-label">Nombre</label>
                         <input type="text" class="form-control" id="nombre" placeholder="Nombre" autofocus>
-
                     </div>
-                    <div class="mb-0">
+                    <div class="mb-4">
                         <label for="fecha" class="form-label">Fecha</label>
                         <input type="date" class="form-control" id="fecha" placeholder="Fecha" autofocus>
                     </div>
                 
                     <div class="d-grid gap-2">
                         <button class="btn btn-primary" type="button" id="btnform">Guardar</button>
-                        <button class="btn btn-success" type="button" id="btnUpdate">Actualizar</button>
+                        <!-- <button class="btn btn-success" type="button" id="btnUpdate">Actualizar</button> -->
                     </div>
 
                 </form>
