--- a/html/material-view.html
+++ b/html/material-view.html
@@ -44,7 +44,7 @@
                 </div>
                 <div class="mb-0">
                     <label for="cantidad" class="form-label">Cantidad de material</label>
-                    <input type="text" class="form-control" id="cantidad" placeholder="ej. 10" autofocus>
+                    <input type="number" class="form-control" id="cantidad" placeholder="ej. 10" autofocus>
                 </div>
 
                 <div class="my-4">
@@ -59,7 +59,6 @@
 
                 <div class="d-grid gap-2">
                     <button class="btn btn-primary" type="button" id="btnform">Guardar</button>
-                    <button class="btn btn-success" type="button" id="btnUpdate">Actualizar</button>
                 </div>
 
             </form>
