se corrigen las rutas que apuntaban a la vieja ruta de lista de materiales (table)

--- a/html/practica.html
+++ b/html/practica.html
@@ -23,7 +23,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav ms-auto">
-                    <a class="nav-link active" aria-current="page" href="lista-materiales.html">material</a><br><br>
+                    <a class="nav-link active" aria-current="page" href="material-view.html">material</a><br><br>
                     <a class="nav-link active" aria-current="page" href="reactivo.html">Reactivos</a>
                     <a class="nav-link active" aria-current="page" href="practica.html">Prácticas</a>
                 </div>
