--- a/html/index.html
+++ b/html/index.html
@@ -21,7 +21,7 @@
             <h3>Laboratorio de química</h3>
             <div class="col-sm-12  col-md-4 col-lg-4 col-xl-4">
                 <div class="card">
-                    <a href="lista-materiales.html">
+                    <a href="material-view.html">
                         <img src="../imagens/material.jpg" class="card-img-top" alt="...">
                     </a>
 
@@ -29,7 +29,7 @@
 
                         <h5 class="card-title">Material</h5>
                         <p class="card-text">Registrar los materiales en el laboratorio</p>
-                        <!-- <a href="lista-materiales.html" class="btn btn-primary" id="practica">Ir a material</a> -->
+                        <!-- <a href="material-view.html" class="btn btn-primary" id="practica">Ir a material</a> -->
                         <a href="material-view.html" class="btn btn-primary" id="practica">Ir a material</a>
                     </div>
                 </div>
