--- a/html/material-view.html
+++ b/html/material-view.html
@@ -11,7 +11,6 @@
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/interfaz.css">
     <title>Materiales del aboratorio</title>
-    <script defer src="../renderer.js"></script>
 </head>
 
 <body>
@@ -79,8 +78,9 @@
             -->
             </div>
         </div>
+    </div>
 
-        <script src="../js/material/material-view.js"></script>
+    <script src="../js/material/material-view.js"></script>
 </body>
 
 </html>
