--- a/html/practica.html
+++ b/html/practica.html
@@ -3,23 +3,22 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Ejemplo de una aplicación">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src 'self' data:;">
+    <meta name="description" content="MaterialView">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Laboratorio de química</title>
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/interfaz.css">
+    <title>Laboratorio de química</title>
 </head>
 
-
 <body>
-
-
-
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark  justify-content-center">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark justify-content-center">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">Inicio</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation"></button>
-            <span class="navbar-toggler-icon"></span>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav ms-auto">
@@ -30,55 +29,58 @@
             </div>
         </div>
     </nav>
-    <div class="container my-3">
-        <div class="row">
-            <div class="col-sm-12 col-md-2 col-lg-2 col-xl-2 py-4 bg-white">
-                <input type="text" id="idreactivo" hidden>
+
+    <div class="general">
+            <div class="bg-white form-container">
                 <h3>Prácticas</h3>
-                <form>
-                    <div class="mb-0">
-                        <label for="nombre" class="form-label">Nombre</label>
-                        <input type="text" class="form-control" id="nombre" placeholder="Nombre" autofocus>
+                <form class="text-black">
+                    <div class="mb-2">
+                        <label for="nombre" class="">Nombre de la práctica</label>
+                        <input type="text" class="form-control" id="nombre" placeholder="ej. Termoquímica" autofocus>
                     </div>
-                    <div class="mb-4">
-                        <label for="fecha" class="form-label">Fecha</label>
-                        <input type="date" class="form-control" id="fecha" placeholder="Fecha" autofocus>
+
+                    <div class="mb-2">
+                        <label for="materiales">Materiales disponibles</label>
+                        <select class="form-select" id="materiales" multiple>
+                            <!-- opciones de materiales -->
+                        </select>
                     </div>
-                
+
+                    <div class="mb-2">
+                        <label for="cantidad" class="">Cantidad</label>
+                        <input type="number" class="form-control" id="cantidad" placeholder="Cantidad" autofocus>
+                    </div>
+
+                    <div class="mb-2">
+                        <button class="btn btn-success btn-sm" type="button" id="agregarMaterial">Agregar Material</button>
+                    </div>
+
                     <div class="d-grid gap-2">
-                        <button class="btn btn-primary" type="button" id="btnform">Guardar</button>
-                        <!-- <button class="btn btn-success" type="button" id="btnUpdate">Actualizar</button> -->
+                        <button class="btn btn-primary" type="button" id="btnform">Guardar práctica</button>
                     </div>
-
                 </form>
-
             </div>
+
             <div class="col-sm-12 col-md-10 col-lg-10 col-xl-10 py-4 bg-white">
                 <h3>Listado de Practicas</h3>
                 <h4 class="pt-3" id="subtitle"></h4>
                 <table class="table table-dark table-striped table-md" id="table-practicas">
                     <thead>
                         <tr>
-
                             <th class="centrado">Nombre</th>
                             <th class="centrado">Fecha</th>
-                            
-                            <th class="centrado"></th>
-                            <th class="centrado"></th>
+                            <th class="centrado">Materiales</th>
+                            <th class="centrado">Acciones</th>
                         </tr>
                     </thead>
                     <tbody id="mylist">
                         <!-- info -->
-
                     </tbody>
                 </table>
-
             </div>
-        </div>
-
     </div>
-    <script src="../js/practica.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+
+<script src="../js/practica.js"></script>
 </body>
 
 </html>
