materiales y de mas

--- a/html/practica.html
+++ b/html/practica.html
@@ -38,6 +38,10 @@
                         <label for="nombre" class="">Nombre de la práctica</label>
                         <input type="text" class="form-control" id="nombre" placeholder="ej. Termoquímica" autofocus>
                     </div>
+                    <div class="mb-4">
+                        <label for="fecha" class="form-label">Fecha</label>
+                        <input type="date" class="form-control" id="fecha" placeholder="Fecha" autofocus>
+                    </div>
 
                     <div class="mb-2">
                         <label for="materiales">Materiales disponibles</label>
