--- a/html/material-view.html
+++ b/html/material-view.html
@@ -24,10 +24,10 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav ms-auto">
-                    <a class="nav-link active" aria-current="page" href="material-view.html">material</a><br><br>
+                    <a class="nav-link active" aria-current="page" href="material-view.html">Material</a><br><br>
                     <!-- <a class="nav-link active" aria-current="page" href="material-view.html">material</a><br><br> -->
                     <a class="nav-link active" aria-current="page" href="reactivo.html">Reactivos</a>
-                    <a class="nav-link active" aria-current="page" href="practica.html">prácticas</a>
+                    <a class="nav-link active" aria-current="page" href="practica.html">Prácticas</a>
                 </div>
             </div>
         </div>
