--- a/html/material-view.html
+++ b/html/material-view.html
@@ -25,7 +25,6 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav ms-auto">
                     <a class="nav-link active" aria-current="page" href="material-view.html">Material</a><br><br>
-                    <!-- <a class="nav-link active" aria-current="page" href="material-view.html">material</a><br><br> -->
                     <a class="nav-link active" aria-current="page" href="reactivo.html">Reactivos</a>
                     <a class="nav-link active" aria-current="page" href="practica.html">Prácticas</a>
                 </div>
@@ -35,6 +34,16 @@
 
     <div class="general">
         <div class="form-container">
+
+            <form>
+                <div class="input-group mb-3">
+                  <input type="text" class="form-control" placeholder="Nombre.." aria-label="Buscar" aria-describedby="boton-buscar" id="busqueda-input">
+                  <div class="input-group-append">
+                    <button class="btn btn-primary" type="button" id="boton-buscar">Buscar</button>
+                  </div>
+                </div>
+            </form>
+
             <form id="material-form">
                 <div class="mb-2">
                     <label for="nombre" class="form-label">Nombre del material</label>
