--- a/html/reactivo.html
+++ b/html/reactivo.html
@@ -23,21 +23,30 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav ms-auto">
-                    <a class="nav-link active" aria-current="page" href="material-view.html">material</a><br><br>
+                    <a class="nav-link active" aria-current="page" href="material-view.html">Material</a><br><br>
                     <a class="nav-link active" aria-current="page" href="reactivo.html">Reactivos</a>
                     <a class="nav-link active" aria-current="page" href="practica.html">Prácticas</a>
                 </div>
             </div>
         </div>
     </nav>
-    <div class="container my-3">
+    <div class="container my-3 text-black">
         <div class="row">
             <div class="col-sm-12 col-md-2 col-lg-2 col-xl-2 py-4 bg-white">
                 <input type="text" id="idreactivo" hidden>
                 <h2>Reactivos</h2>
+
+                <form>
+                    <div class="input-group mb-3">
+                      <input type="text" class="form-control" placeholder="Nombre.." aria-label="Buscar" aria-describedby="boton-buscar" id="busqueda-input">
+                      <div class="input-group-append">
+                        <button class="btn btn-primary" type="button" id="boton-buscar">Buscar</button>
+                      </div>
+                    </div>
+                </form>
+
                 <form>
                     <div class="mb-0">
-                        <!-- <label for="nombre" class="form-label">Clasificación</label> -->
                         <input type="text" class="form-control" id="clasificacion" placeholder="Clasificación" autofocus>
 
                     </div>
@@ -54,9 +63,8 @@
                         <label for="presentacion" class="form-label">Cantidad</label>
                         <input type="number" class="form-control" id="cantidad" placeholder="100">
                     </div>
-                    <div class="my-4">
+                    <div class="my-1">
                         <table class="table">
-
                             <thead>
                                 <tr>
                                     <th class="centrado">Código de colores</th>
@@ -75,14 +83,8 @@
                                     <td class="centradobg-blue"></td>
                                 </tr>
                             </tbody>
-
-
-
                         </table>
-
-
                     </div><br>
-
                     <div class="d-grid gap-2">
                         <button class="btn btn-primary" type="button" id="btnform">Guardar</button>
                     </div>
@@ -93,7 +95,7 @@
             <div class="col-sm-12 col-md-10 col-lg-10 col-xl-10 py-4  text-bg-dark">
                 <h3>Lista de reactivos</h3>
                 <h4 class="pt-3" id="subtitle"></h4>
-                <table class="table  table-dark  table-md">
+                <table class="table table-reactivos table-dark  table-md">
                     <thead>
                         <tr>
 
