consulta a materiales e insercion funcionando

--- a/html/material-by-id.html
+++ b/html/material-by-id.html
@@ -44,12 +44,10 @@
             <div class="info">
                 <h3 id="material-nombre"></h3>
                 <ul>
-                    <li>Cantidad<p id="material-cantidad"></p>
-                    </li>
-                    <li>Volumen<p id="material-volumen"></p>
-                    </li>
-                    <li>Unidad<p id="material-unidad"></p>
-                    </li>
+                    <li>Cantidad<p id="material-cantidad"></p></li>
+                    <li>Tamaño<p id="material-tamanio"></p></li>
+                    <li>Unidad<p id="material-unidad"></p></li>
+                    <li>Clasificación<p id="material-clasificacion"></p></li>
                 </ul>
             </div>
         </div>
