--- a/html/material-view.html
+++ b/html/material-view.html
@@ -46,9 +46,12 @@
 
             <form id="material-form">
                 <div class="mb-2">
+                    <label for="clasificacion" class="form-label">Clasificación del material</label>
+                    <input type="text" class="form-control" id="clasificacion" placeholder="ej. Vidrio" autofocus>
+                </div>
+                <div class="mb-0">
                     <label for="nombre" class="form-label">Nombre del material</label>
                     <input type="text" class="form-control" id="nombre" placeholder="ej. vaso precipitado" autofocus>
-
                 </div>
                 <div class="mb-0">
                     <label for="cantidad" class="form-label">Cantidad de material</label>
@@ -58,9 +61,9 @@
                 <div class="my-4">
                     <h3 class="text-white">Capacidad</h3>
                     <div class="container-input-capacidad">
-                        <input type="number" class="form-control" id="volumen" placeholder="Volumen">
-                        <input type="text" class="form-control" id="unidad" placeholder="Unidades">
-                        <!-- <input type="file" class="form-control file-input" accept="image/*" placeholder="imagen" id="imagen"> -->
+                        <input type="text" class="form-control" id="tamanio" placeholder="Tamaño">
+                        <input type="text" class="form-control" id="unidades" placeholder="Unidades">
+                        <input type="text" class="form-control" id="caract_esp" placeholder="Características específicas">
                         <input type="file" class="form-control file-input" accept="image/*" id="imagen">
                     </div>
                 </div>
