se mejora la apariencia del home

--- a/html/index.html
+++ b/html/index.html
@@ -9,57 +9,73 @@
     <link href="../css/index.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/interfaz.css">
-    <title>Laboratorio de química</title>
+    <title>Inicio</title>
     <script defer src="../renderer.js"></script>
 </head>
 
 <body>
     <div class="container">
-        <div class="row">
-            <h1>TecMM</h1>
-            <br>
-            <h3>Laboratorio de química</h3>
-            <div class="col-sm-12  col-md-4 col-lg-4 col-xl-4">
-                <div class="card">
+        <h1>TecMM</h1>
+        <br>
+        <h3>Laboratorio de química</h3>
+
+        <div class="container-cards">
+            <div class="card-home">
+                <div class="container-img">
                     <a href="material-view.html">
                         <img src="../imagens/material.jpg" class="card-img-top" alt="...">
                     </a>
-
-                    <div class="card-body">
-
-                        <h5 class="card-title">Material</h5>
-                        <p class="card-text">Registrar los materiales en el laboratorio</p>
-                        <!-- <a href="material-view.html" class="btn btn-primary" id="practica">Ir a material</a> -->
-                        <a href="material-view.html" class="btn btn-primary" id="practica">Ir a material</a>
-                    </div>
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">Material</h5>
+                    <p class="card-text">Registrar los materiales en el laboratorio</p>
+                    <a href="material-view.html" class="btn btn-primary" id="practica">Ir a material</a>
                 </div>
             </div>
-            <div class="col-sm-12  col-md-4 col-lg-4 col-xl-4">
-                <div class="card">
+
+            <div class="card-home">
+                <div class="container-img">
                     <a href="reactivo.html">
                         <img src="../imagens/reactivos.jpg" class="card-img-top" alt="...">
                     </a>
-                    <div class="card-body">
-                        <h5 class="card-title">Reactivos</h5>
-                        <p class="card-text">Registrar los reactivos en el laboratorio</p>
-                        <a href="reactivo.html" class="btn btn-primary" id="reactivo">Ir a reactivos</a>
-                    </div>
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">Reactivos</h5>
+                    <p class="card-text">Registrar los reactivos en el laboratorio</p>
+                    <a href="reactivo.html" class="btn btn-primary" id="reactivo">Ir a reactivos</a>
                 </div>
             </div>
-            <div class="col-sm-12  col-md-4 col-lg-4 col-xl-4">
-                <div class="card">
+
+            <div class="card-home">
+                <div class="container-img">
                     <a href="practica.html">
                         <img src="../imagens/practicas.jpg" class="card-img-top" alt="...">
                     </a>
+                </div>
 
-                    <div class="card-body">
-                        <h5 class="card-title">Prácticas</h5>
-                        <p class="card-text">Registrar la lista de las prácticas</p>
-                        <a href="practica.html" class="btn btn-primary" id="practica">Ir a prácticas</a>
-                    </div>
+                <div class="card-body">
+                    <h5 class="card-title">Prácticas</h5>
+                    <p class="card-text">Registrar la lista de las prácticas</p>
+                    <a href="practica.html" class="btn btn-primary" id="practica">Ir a prácticas</a>
                 </div>
             </div>
+
+            <div class="card-home">
+                <div class="container-img">
+                    <a href="practica.html">
+                        <img src="../imagens/reactivos.jpg" class="card-img-top" alt="...">
+                    </a>
+                </div>
+
+                <div class="card-body">
+                    <h5 class="card-title">Equipo</h5>
+                    <p class="card-text">Registrar el equipo del laboratorio</p>
+                    <a href="practica.html" class="btn btn-primary" id="practica">Ir a prácticas</a>
+                </div>
+            </div>
+
         </div>
+        <!-- </div> -->
     </div>
 </body>
 
