refactor: se hace componente el menu para evitar duplicidad de codigo

--- a/html/index.html
+++ b/html/index.html
@@ -56,7 +56,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Prácticas</h5>
                     <p class="card-text">Registrar la lista de las prácticas</p>
-                    <a href="practica.html" class="btn btn-primary" id="practica">Ir a prácticas</a>
+                    <a href="practica.html" class="btn btn-primary" id="practica">Crear prácticas</a>
                 </div>
             </div>
 
@@ -71,6 +71,20 @@
                     <h5 class="card-title">Equipo</h5>
                     <p class="card-text">Registrar el equipo del laboratorio</p>
                     <a href="practica.html" class="btn btn-primary" id="practica">Ir a prácticas</a>
+                </div>
+            </div>
+
+            <div class="card-home">
+                <div class="container-img">
+                    <a href="practicas-realizadas.html">
+                        <img src="../imagens/practicas.jpg" class="card-img-top" alt="...">
+                    </a>
+                </div>
+
+                <div class="card-body">
+                    <h5 class="card-title">Prácticas</h5>
+                    <p class="card-text">Hecha un vistazo a las prácticas realizadas</p>
+                    <a href="practicas-realizadas.html" class="btn btn-primary" id="practica">Ver prácticas</a>
                 </div>
             </div>
 
