--- a/html/reactivo.html
+++ b/html/reactivo.html
@@ -8,28 +8,17 @@
     <title>Laboratorio de química</title>
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/interfaz.css">
+    <script src="../js/helpers/navigationComponent.js" type="module"></script>
 </head>
 
-
 <body>
+  <header id="header">
+  </header>
+  <script type="module">
+    import { addNavigationComponent } from '../js/helpers/navigationComponent.js';
+    document.addEventListener('DOMContentLoaded', addNavigationComponent);
+  </script>
 
-
-
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark  justify-content-center">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">Inicio</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation"></button>
-            <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav ms-auto">
-                    <a class="nav-link active" aria-current="page" href="material-view.html">Material</a><br><br>
-                    <a class="nav-link active" aria-current="page" href="reactivo.html">Reactivos</a>
-                    <a class="nav-link active" aria-current="page" href="practica.html">Prácticas</a>
-                </div>
-            </div>
-        </div>
-    </nav>
     <div class="container my-3 text-black">
         <div class="row">
             <div class="col-sm-12 col-md-2 col-lg-2 col-xl-2 py-4 bg-white">
